--- a/index.html
+++ b/index.html
@@ -86,17 +86,17 @@
                 <div class="row member-list clear">
                     <div class="col col-third s-col-full mt32 text-center">
                         <p class="member-name">Pilot</p>
-                        <img src="C:\Users\tab23\OneDrive\Máy tính\Front-end practice\assets\img\cabin crew\Pilot.png" alt="Name" class="memner-img">
+                        <img src="./assets\img\cabin crew\Pilot.png" alt="Name" class="memner-img">
                     </div>
 
                     <div class="col col-third s-col-full mt32 text-center">
                         <p class="member-name">Flight attendant</p>
-                        <img src="C:\Users\tab23\OneDrive\Máy tính\Front-end practice\assets\img\cabin crew\Flight attendant.png" alt="Name" class="memner-img">
+                        <img src="./assets\img\cabin crew\Flight attendant.png" alt="Name" class="memner-img">
                     </div>
 
                     <div class="col col-third s-col-full mt32 text-center">
                         <p class="member-name">Steward</p>
-                        <img src="C:\Users\tab23\OneDrive\Máy tính\Front-end practice\assets\img\cabin crew\steward.png" alt="Name" class="memner-img">
+                        <img src="./assets\img\cabin crew\steward.png" alt="Name" class="memner-img">
                     </div>
                 </div>
             </div>
@@ -114,7 +114,7 @@
                     <!-- place -->
                     <div class="row place-list">
                         <div class="col col-third s-col-full mt16">
-                            <img src="C:\Users\tab23\OneDrive\Máy tính\Front-end practice\assets\img\place\newyork.jpg" alt="New york" class="place-img">
+                            <img src="./assets\img\place\newyork.jpg" alt="New york" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">New York</h3>
                                 <p class="place-time">Fri 27 Nov 2016</p>
@@ -123,7 +123,7 @@
                             </div>
                         </div>
                         <div class="col col-third s-col-full mt16">
-                            <img src="C:\Users\tab23\OneDrive\Máy tính\Front-end practice\assets\img\place\paris.jpg" alt="Paris" class="place-img">
+                            <img src="./assets\img\place\paris.jpg" alt="Paris" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">Paris</h3>
                                 <p class="place-time">Sat 28 Nov 2016</p>
@@ -132,7 +132,7 @@
                             </div>
                         </div>
                         <div class="col col-third s-col-full mt16">
-                            <img src="C:\Users\tab23\OneDrive\Máy tính\Front-end practice\assets\img\place\sanfran.jpg" alt="San Francisco" class="place-img">
+                            <img src="./assets\img\place\sanfran.jpg" alt="San Francisco" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">San Francisco</h3>
                                 <p class="place-time">Sun 29 Nov 2016</p>
