--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./assets\css\styles.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
     <link rel="stylesheet" href="./assets/fonts/themify-icons/themify-icons.css">
 </head>
@@ -86,17 +86,17 @@
                 <div class="row member-list clear">
                     <div class="col col-third s-col-full mt32 text-center">
                         <p class="member-name">Pilot</p>
-                        <img src="./assets\img\cabin crew\Pilot.png" alt="Name" class="memner-img">
+                        <img src="./assets/img/cabin crew/Pilot.png" alt="Name" class="memner-img">
                     </div>
 
                     <div class="col col-third s-col-full mt32 text-center">
                         <p class="member-name">Flight attendant</p>
-                        <img src="./assets\img\cabin crew\Flight attendant.png" alt="Name" class="memner-img">
+                        <img src="./assets/img/cabin crew/Flight attendant.png" alt="Name" class="memner-img">
                     </div>
 
                     <div class="col col-third s-col-full mt32 text-center">
                         <p class="member-name">Steward</p>
-                        <img src="./assets\img\cabin crew\steward.png" alt="Name" class="memner-img">
+                        <img src="./assets/img/cabin crew/steward.png" alt="Name" class="memner-img">
                     </div>
                 </div>
             </div>
@@ -114,7 +114,7 @@
                     <!-- place -->
                     <div class="row place-list">
                         <div class="col col-third s-col-full mt16">
-                            <img src="./assets\img\place\newyork.jpg" alt="New york" class="place-img">
+                            <img src="./assets/img/place/newyork.jpg" alt="New york" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">New York</h3>
                                 <p class="place-time">Fri 27 Nov 2016</p>
@@ -123,7 +123,7 @@
                             </div>
                         </div>
                         <div class="col col-third s-col-full mt16">
-                            <img src="./assets\img\place\paris.jpg" alt="Paris" class="place-img">
+                            <img src="./assets/img/place/paris.jpg" alt="Paris" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">Paris</h3>
                                 <p class="place-time">Sat 28 Nov 2016</p>
@@ -132,7 +132,7 @@
                             </div>
                         </div>
                         <div class="col col-third s-col-full mt16">
-                            <img src="./assets\img\place\sanfran.jpg" alt="San Francisco" class="place-img">
+                            <img src="./assets/img/place/sanfran.jpg" alt="San Francisco" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">San Francisco</h3>
                                 <p class="place-time">Sun 29 Nov 2016</p>
