--- a/index.html
+++ b/index.html
@@ -47,21 +47,21 @@
 
                 <div class="mySlides fade">
                   <div class="numbertext">1 / 3</div>
-                  <img src="https://images.wallpapersden.com/image/download/los-angeles_a2xpZWeUmZqaraWkpJRmZ21lrWxnZQ.jpg" style="width:100%">
+                  <img src="./assets/img/slider/LA.jpg" style="width:100%">
                   <div class="text-content"><h3>Los Angeles</h3>
                     <p><b>Enjoy wonderfull night at Venice Beach!</b></p></div>
                 </div>
                 
                 <div class="mySlides fade">
                   <div class="numbertext">2 / 3</div>
-                  <img src="https://images.wallpapersden.com/image/download/usa-city-new-york_Zm1la2aUmZqaraWkpJRmZ21lrWxnZQ.jpg" style="width:100%">
+                  <img src="./assets/img/slider/NY.jpg" style="width:100%">
                   <div class="text-content"><h3>New York</h3>
                     <p><b>The atmosphere in New York is lorem ipsum.</b></p></div>
                 </div>
                 
                 <div class="mySlides fade">
                   <div class="numbertext">3 / 3</div>
-                  <img src="https://images.wallpapersden.com/image/download/chicago-city-view-at-sunset_bGVtamaUmZqaraWkpJRmZ21lrWxnZQ.jpg" style="width:100%">
+                  <img src="./assets/img/slider/CH.jpg" style="width:100%">
                   <div class="text-content"><h3>Chicago</h3>
                     <p><b>Chicago the Windy city .</b></p></div>
                 </div>
